alomost done with the auth and admin dashboard

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                     <a href="#pricing" class="hover:text-primary transition">Pricing</a>
                     <a href="#demo" class="hover:text-primary transition">Demo</a>
                 </nav>
-                <a href="#get-started" class="hidden md:block px-6 py-2 bg-primary rounded-lg font-semibold glow hover:bg-primary/90 transition">Get Started</a>
+                <a href="signup.html" class="hidden md:block px-6 py-2 bg-primary rounded-lg font-semibold glow hover:bg-primary/90 transition">Get Started</a>
             </div>
             <!-- Mobile nav panel and backdrop -->
             <div id="mobile-nav-backdrop" class="fixed inset-0 bg-black/60 backdrop-blur-sm z-40 opacity-0 pointer-events-none transition-opacity duration-300"></div>
