--- a/index.html
+++ b/index.html
@@ -494,9 +494,10 @@
                             <span class="font-semibold text-lg text-white">Customize Settings</span>
                         </div>
                         <h3 class="text-2xl md:text-3xl font-bold mb-2 text-left">Customize Settings</h3>
-                        <p class="text-gray-400 text-lg mb-4 text-left">Set up your preferences and AI behavior</p>
+                        <p class="text-gray-400 text-lg mb-4 text-left">Set up your preferences and AI behavior. Place This code above your Chatbot Code</p>
                         <div class="bg-dark/50 rounded-lg p-4 mb-4 text-left font-mono text-sm overflow-x-auto relative">
                             <code class="text-primary" id="code-settings">
+                                &lt;script&gt;<br>
                                 window.ChatboxSettings = {<br>
                                 &nbsp;&nbsp;themecolor: "#6366f1",<br>
                                 &nbsp;&nbsp;txtcolor: "",<br>
@@ -504,6 +505,7 @@
                                 &nbsp;&nbsp;position: "right",<br>
                                 &nbsp;&nbsp;companyInfo: "", //Give Your Company Info<br>
                                 };
+                                &lt;/script&gt;
                               </code>
                               
                             <button class="copy-btn" onclick="copyCode('code-settings', this)">Copy</button>
@@ -521,8 +523,8 @@
                             </div>
                             <span class="font-semibold text-lg text-white">Go Live</span>
                         </div>
-                        <h3 class="text-2xl md:text-3xl font-bold mb-2 text-left">Go Live</h3>
-                        <p class="text-gray-400 text-lg mb-4 text-left">Your chat widget is ready to engage visitors</p>
+                        <h3 class="text-2xl md:text-3xl font-bold mb-2 text-left">See what Your Clients Sended</h3>
+                        <p class="text-gray-400 text-lg mb-4 text-left">Sign in to our Website to see your Clients Messgaes</p>
                         <div class="bg-dark/50 rounded-lg p-4 mb-4 text-left font-mono text-sm overflow-x-auto relative">
                             <code class="text-primary" id="code-live">// Your chat widget is now live!<br>// Start engaging with visitors</code>
                         </div>
