--- a/login.html
+++ b/login.html
@@ -1,13 +1,115 @@
 
 <!DOCTYPE html>
 <html>
-<head><title>Login</title><link rel="stylesheet" href="style.css"></head>
+<head>
+  <title>Login</title>
+  <style>
+      /* BASE RESET */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+body {
+  height: 100vh;
+  font-family: 'Segoe UI', sans-serif;
+  background-color: #121212;
+  background-image: url('https://www.transparenttextures.com/patterns/dark-mosaic.png'); /* WhatsApp-style pattern */
+  background-repeat: repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 20px;
+}
+
+/* LOGIN CARD */
+form {
+  background: #1f1f1f;
+  padding: 40px 30px;
+  border-radius: 14px;
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.8);
+  width: 100%;
+  max-width: 360px;
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+}
+
+h2 {
+  text-align: center;
+  margin-bottom: 10px;
+  color: #e0e0e0;
+}
+
+/* INPUT FIELDS */
+input {
+  padding: 12px 14px;
+  font-size: 14px;
+  background: #2d2d2d;
+  border: 1px solid #333;
+  border-radius: 6px;
+  color: #f0f0f0;
+  outline: none;
+  transition: border 0.3s;
+}
+
+input:focus {
+  border-color: #6366f1;
+}
+
+/* LOGIN BUTTON */
+button {
+  padding: 12px;
+  background: #6366f1;
+  color: white;
+  font-weight: bold;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 15px;
+  transition: background 0.3s;
+}
+
+button:hover {
+  background: #4f46e5;
+}
+
+/* SIGNUP LINK */
+.signup {
+  text-align: center;
+  font-size: 14px;
+  color: #aaa;
+}
+
+.signup a {
+  color: #6366f1;
+  text-decoration: none;
+  font-weight: 600;
+}
+
+.signup a:hover {
+  text-decoration: underline;
+}
+
+/* RESPONSIVE */
+@media (max-width: 400px) {
+  form {
+    padding: 30px 20px;
+  }
+}
+
+  </style>
+</head>
 <body>
-  <h2>Login</h2>
   <form id="login-form">
-    <input type="email" id="email" placeholder="Email" required><br>
-    <input type="password" id="password" placeholder="Password" required><br>
+    <h2>Login</h2>
+    <input type="email" id="email" placeholder="Email" required>
+    <input type="password" id="password" placeholder="Password" required>
     <button type="submit">Login</button>
+    <div class="signup">
+      Don't have an account? <a href="signup.html">Create Account</a>
+    </div>
   </form>
   <script type="module" src="js/auth.js"></script>
 </body>
