--- a/setup-profile.html
+++ b/setup-profile.html
@@ -1,12 +1,98 @@
-
+<!-- 
 <!DOCTYPE html>
 <html>
-<head><title>Setup Profile</title><link rel="stylesheet" href="style.css"></head>
+<head>
+  <title>Setup Profile</title>
+  <style>
+    
+  </style>
+</head>
 <body>
   <h2>Profile Setup</h2>
   <form id="profile-form">
     <input type="text" id="name" placeholder="Your Name" required><br>
     <input type="text" id="domain" placeholder="yourdomain.com" required><br>
+    <button type="submit">Save Profile</button>
+  </form>
+  <script type="module" src="js/profile.js"></script>
+</body>
+</html> -->
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Setup Profile</title>
+  <style>
+    /* Base styling */
+    body {
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+      background-color: #111;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: #fff;
+    }
+
+    /* Card-style form container */
+    form#profile-form {
+      background-color: #1e1e1e;
+      padding: 40px 30px;
+      border-radius: 12px;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.6);
+      display: flex;
+      flex-direction: column;
+      width: 25vw;
+    }
+
+    h2 {
+      text-align: center;
+      margin-bottom: 25px;
+      font-size: 28px;
+      font-weight: bold;
+    }
+
+    /* Input styling */
+    input[type="text"] {
+      background-color: #2a2a2a;
+      border: none;
+      outline: none;
+      color: #fff;
+      padding: 12px 15px;
+      margin-bottom: 25px;
+      border-radius: 8px;
+      font-size: 15px;
+      transition: background 0.2s ease;
+    }
+
+    input[type="text"]:focus {
+      background-color: #333;
+    }
+
+    /* Button styling */
+    button[type="submit"] {
+      background: linear-gradient(to right, #6a5af9, #a555ec);
+      color: white;
+      padding: 12px;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: opacity 0.3s ease;
+    }
+
+    button[type="submit"]:hover {
+      opacity: 0.9;
+    }
+  </style>
+</head>
+<body>
+  <h2>Profile Setup</h2>
+  <form id="profile-form">
+    <input type="text" id="name" placeholder="Your Name" required>
+    <input type="text" id="domain" placeholder="yourdomain.com" required>
     <button type="submit">Save Profile</button>
   </form>
   <script type="module" src="js/profile.js"></script>
