Almost done with the responsive and added a tag which fixes a bug

--- a/login.html
+++ b/login.html
@@ -3,6 +3,7 @@
 <html>
 <head>
   <title>Login</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
       /* BASE RESET */
 * {
@@ -98,6 +99,26 @@ button:hover {
     padding: 30px 20px;
   }
 }
+@media (max-width: 320px) {
+  form {
+    padding: 25px 15px;
+    gap: 14px;
+  }
+
+  input, button {
+    font-size: 13px;
+    padding: 10px;
+  }
+
+  h2 {
+    font-size: 20px;
+  }
+
+  .signup {
+    font-size: 13px;
+  }
+}
+
 
   </style>
 </head>
