--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                 <a href="#how" class="mobile-nav-link">How It Works</a>
                 <a href="#pricing" class="mobile-nav-link">Pricing</a>
                 <a href="#demo" class="mobile-nav-link">Demo</a>
-                <a href="#get-started" class="px-6 py-2 bg-primary rounded-lg font-semibold glow hover:bg-primary/90 transition text-center mobile-nav-link">Get Started</a>
+                <a href="signup.html" class="px-6 py-2 bg-primary rounded-lg font-semibold glow hover:bg-primary/90 transition text-center mobile-nav-link">Get Started</a>
             </nav>
         </div>
     </header>
